tried to create new css file

--- a/in-lab-examples/puinote-lab01/puinote-start/index.html
+++ b/in-lab-examples/puinote-lab01/puinote-start/index.html
@@ -4,10 +4,14 @@
 
   <head>
     <title>PUI-NOTE Exercise 1</title>
+
   </head>
 
 
   <body>
+    <div class = 'notecard'>
+      placehodreplaceholderplaceholder
+    </div>
 
   </body>
   
