added basic things to css doc

--- a/in-lab-examples/puinote-lab01/puinote-start/index.html
+++ b/in-lab-examples/puinote-lab01/puinote-start/index.html
@@ -4,12 +4,12 @@
 
   <head>
     <title>PUI-NOTE Exercise 1</title>
-    <link rel="stylesheet" href="css/my style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
 
   <body>
-    <div class = 'notecard'>
+    <div class = "notecard">
       placehodreplaceholderplaceholder
     </div>
 
