--- a/in-lab-examples/puinote-lab01/puinote-start/index.html
+++ b/in-lab-examples/puinote-lab01/puinote-start/index.html
@@ -4,13 +4,30 @@
 
   <head>
     <title>PUI-NOTE Exercise 1</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100;1,200&display=swap"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
   </head>
 
 
   <body>
     <div class = "notecard">
-      placehodreplaceholderplaceholder
+      <img class = "notecard-thumbnail" src = "assets/warhol-zebra.png">
+
+      <div class = "note-title">
+        Here is Sample Title
+      </div>
+
+      <div class = "note-body">
+        sample body text
+      </div>
+
     </div>
 
   </body>
