--- a/in-lab-examples/puinote-lab02/puinote-start/index.html
+++ b/in-lab-examples/puinote-lab02/puinote-start/index.html
@@ -26,15 +26,27 @@
 
   <body>
     <div class="notecard">
-      <img class="notecard-thumbnail" src="assets/warhol-zebra.png" />
-      <div class="note-title">A Placeholder Title Goes Here</div>
-      <div class="note-body">
-        Here is some placeholder body text. And here is some more... and wait,
-        here is even more! look at all this text! It just keeps going and going
-        and going.
+
+      <div class = "notecard-left">
+        <div class = "notecard-content">
+          <img class="notecard-thumbnail" alt = "zera painted by andy warhol" src="assets/warhol-zebra.png" />
+          <div class = "notecard-text">
+            <div class="note-title">A Placeholder Title Goes Here</div>
+            <div class="note-body">
+              Here is some placeholder body text. And here is some more... and wait,
+              here is even more! look at all this text! It just keeps going and going
+              and going.
+            </div>
+          </div>
+        </div>
+
+        <div class = "date">
+          Sep 04 2022, 13:59
+        </div>
       </div>
 
-      <button class="btn-delete">X</button>
+      <div class = "notecard-right"></div>
+
     </div>
   </body>
 </html>
